 unix-pipe-device.bsv      Locally Modified          726 
 unix-pipe-li-device.bsv   Locally Modified          726 
 unix-pipe-device-bdpi.c   Locally Modified          726 
 unix-pipe-device.cpp      Locally Modified          726 
 unix-pipe-device-bdpi.h   Locally Modified          726 

Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/clocks/fixed-ml605
 single-ended-clocks-device.bsv Locally Modified          726 
 single-ended-clocks-import.bsv Locally Modified          726 

Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/clocks/simulation
 sim-clocks-device.bsv     Locally Modified          726 

Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/clocks/null
 null-clocks-device.bsv    Locally Modified          726 

Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/clocks/differential
 differential-clocks-vhdl-import.bsv Locally Modified          726 
 differential-clocks-device.bsv Locally Modified          726 
 differential-clocks-from-clocks.bsv Locally Modified          726 

Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/clocks/single-ended
 single-ended-clocks-device.bsv Locally Modified          726 
 single-ended-clocks-import.bsv Locally Modified          726 

Directory modules/bluespec/common/fpgaenv/physical-platform/pci-express-generic
 pcie-generic-platform.h   Locally Modified          726 
 pcie-generic-platform.bsv Locally Modified          726 
 pcie-generic-platform.cpp Locally Modified          726 

Directory modules/bluespec/common/fpgaenv/physical-platform/altera_jtag/jtag
 altera-jtag.h             Locally Modified          726 
 altera-jtag.bsv           Locally Modified          726 
 altera-jtag.cpp           Locally Modified          726 

Directory drivers/linux/platforms/bluenoc-pcie/ioctl
 bluenoc-ioctl.c           Locally Modified          726 

Switch to BSD license.