@@ -7,6 +7,6 @@ Description=Description of platforms
 Name=leap-platforms
 Tag=v13.06
 Prerelease=1
-CSN=CSN-leap-platforms-727
+CSN=CSN-leap-platforms-728
 Dependencies=leap/v13.06
 Sourceurl=http://asim.csail.mit.edu/redmine/projects/leap-platforms/repository/entry/trunk/
